more basic structure

--- a/page.html
+++ b/page.html
@@ -7,11 +7,79 @@
     <title>Chase Haye</title>
 </head>
 <body>
+    <div id="main-page">
+        <div>
+            <!-- NavBar and Logo -->
+            <nav>
+                <div id="logo">
+                    <div id="ico">
+                    </div>
+                </div>
+                <div id="name">Chase Haye</div>
+                <div id="menu-btn">btn</div>
+            </nav>
 
-    <!-- NavBar and Logo -->
-    <nav>
+            <!-- Project Carousel -->
+            <div id="carousel">
+                <div id="img-container">
+                    <div class="carousel-filler">
+                    </div>
+                        <div id="proj-img">
+                        </div>
+                    <div class="carousel-filler">
+                    </div>
+                </div>
 
-    </nav>
+                <div id="carousel-bar">
+                    <div>
+                        Gear Box
+                    </div>
+                    <div id="carousel-controller">
+                        <div>arrow</div>
+                        <div>counter</div>
+                        <div>arrow</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Statement -->
+            <div id="statement">
+                <div class="filler">
+                </div>
+                <div id="statement_text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="filler">
+                </div>
+            </div>
+
+            <!-- Filler div -->
+            <div>
+                <span>text</span>
+            </div>
+        </div>
+
+        <div id="main-filler">
+            SIDE DIV WITH SPACE INSIDE
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <!-- leave contact info -->
+    <div class="bottom">
+        <span>contact me</span>
+    </div>
+
+    <!-- foot -->
+    <div class="bottom">
+        <span>footer</span>
+    </div>
+
     
 
 
