--- a/page.html
+++ b/page.html
@@ -31,13 +31,13 @@
                 </div>
 
                 <div id="carousel-bar">
-                    <div>
+                    <div id="project-title">
                         Gear Box
                     </div>
                     <div id="carousel-controller">
-                        <div>arrow</div>
-                        <div>counter</div>
-                        <div>arrow</div>
+                        <div class="toggle"><-</div>
+                        <div class="toggle">1/1</div>
+                        <div class="toggle">-></div>
                     </div>
                 </div>
             </div>
