small border additions

--- a/page.html
+++ b/page.html
@@ -10,14 +10,14 @@
     <div id="main-page">
         <div>
             <!-- NavBar and Logo -->
-            <nav>
+            <div id="nav">
                 <div id="logo">
                     <div id="ico">
                     </div>
                 </div>
                 <div id="name">Chase Haye</div>
                 <div id="menu-btn">btn</div>
-            </nav>
+            </div>
 
             <!-- Project Carousel -->
             <div id="carousel">
